crates/servicepoint_binding_uniffi/libraries/swift/servicepoint_binding_uniffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_clone_bitvec(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_bitvec(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_clone(void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_load(RustBuffer data, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_new(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_bitvec_copy_raw(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_bitvec_equals(void*_Nonnull ptr, void*_Nonnull other, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_bitvec_fill(void*_Nonnull ptr, int8_t value, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_bitvec_get(void*_Nonnull ptr, uint64_t index, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_bitvec_len(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_bitvec_set(void*_Nonnull ptr, uint64_t index, int8_t value, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_clone_bitmap(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_bitmap(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new(uint64_t width, uint64_t height, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_brightness(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_char_brightness(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clear(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clone(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_cp437_data(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_fade_out(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_hard_reset(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new_fake(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_clone(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_load(void
    
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_new(void
    
);
uint32_t ffi_servicepoint_binding_uniffi_uniffi_contract_version(void
    
);