crates/servicepoint_binding_uniffi/libraries/python/servicepoint_binding_uniffi.py

_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_brightness.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_brightness.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_char_brightness.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_char_brightness.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clear.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clear.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clone.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clone.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_cp437_data.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_cp437_data.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_fade_out.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_fade_out.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_hard_reset.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_command_hard_reset.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new_fake.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new_fake.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_clone.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_clone.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_load.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_load.restype = ctypes.c_uint16
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_new.argtypes = (
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_new.restype = ctypes.c_uint16
_UniffiLib.ffi_servicepoint_binding_uniffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_servicepoint_binding_uniffi_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.


class _UniffiConverterUInt8(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u8"
    VALUE_MIN = 0
    VALUE_MAX = 2**8

    @staticmethod
    def read(buf):
        return buf.read_u8()

    @staticmethod
    def write(value, buf):
        buf.write_u8(value)

class _UniffiConverterUInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u64"
    VALUE_MIN = 0
    VALUE_MAX = 2**64

    @staticmethod
    def read(buf):
        return buf.read_u64()

    @staticmethod
    def write(value, buf):
        buf.write_u64(value)

class _UniffiConverterBool:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0

    @staticmethod
    def lift(value):
        return value != 0

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write(cls, value, buf):
        buf.write_u8(value)

class _UniffiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiConverterBytes(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative byte string length")
        return buf.read(size)

    @staticmethod
    def check_lower(value):
        try:
            memoryview(value)
        except TypeError:
            raise TypeError("a bytes-like object is required, not {!r}".format(type(value).__name__))

    @staticmethod
    def write(value, buf):
        buf.write_i32(len(value))
        buf.write(value)



class BitVecProtocol(typing.Protocol):
    def copy_raw(self, ):
        raise NotImplementedError
    def equals(self, other: "BitVec"):
        raise NotImplementedError
    def fill(self, value: "bool"):
        raise NotImplementedError
    def get(self, index: "int"):
        raise NotImplementedError
    def len(self, ):
        raise NotImplementedError
    def set(self, index: "int",value: "bool"):
        raise NotImplementedError


class BitVec:
    _pointer: ctypes.c_void_p
    def __init__(self, size: "int"):
        _UniffiConverterUInt64.check_lower(size)
        
        self._pointer = _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_new,
        _UniffiConverterUInt64.lower(size))

    def __del__(self):
        # In case of partial initialization of instances.
        pointer = getattr(self, "_pointer", None)
        if pointer is not None:
            _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_bitvec, pointer)

    def _uniffi_clone_pointer(self):
        return _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_bitvec, self._pointer)

    # Used by alternative constructors or any methods which return this type.
    @classmethod
    def _make_instance_(cls, pointer):
        # Lightly yucky way to bypass the usual __init__ logic
        # and just create a new instance with the required pointer.
        inst = cls.__new__(cls)
        inst._pointer = pointer
        return inst
    @classmethod
    def clone(cls, other: "BitVec"):
        _UniffiConverterTypeBitVec.check_lower(other)
        
        # Call the (fallible) function before creating any half-baked object instances.
        pointer = _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_clone,
        _UniffiConverterTypeBitVec.lower(other))
        return cls._make_instance_(pointer)

    @classmethod
    def load(cls, data: "bytes"):
        _UniffiConverterBytes.check_lower(data)
        
        # Call the (fallible) function before creating any half-baked object instances.
        pointer = _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_load,
        _UniffiConverterBytes.lower(data))
        return cls._make_instance_(pointer)



    def copy_raw(self, ) -> "bytes":
        return _UniffiConverterBytes.lift(
            _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_copy_raw,self._uniffi_clone_pointer(),)
        )





    def equals(self, other: "BitVec") -> "bool":
        _UniffiConverterTypeBitVec.check_lower(other)
        
        return _UniffiConverterBool.lift(
            _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_equals,self._uniffi_clone_pointer(),
        _UniffiConverterTypeBitVec.lower(other))
        )





    def fill(self, value: "bool") -> None:
        _UniffiConverterBool.check_lower(value)
        
        _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_fill,self._uniffi_clone_pointer(),
        _UniffiConverterBool.lower(value))






    def get(self, index: "int") -> "bool":
        _UniffiConverterUInt64.check_lower(index)
        
        return _UniffiConverterBool.lift(
            _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_get,self._uniffi_clone_pointer(),
        _UniffiConverterUInt64.lower(index))
        )





    def len(self, ) -> "int":
        return _UniffiConverterUInt64.lift(
            _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_len,self._uniffi_clone_pointer(),)
        )





    def set(self, index: "int",value: "bool") -> None:
        _UniffiConverterUInt64.check_lower(index)
        
        _UniffiConverterBool.check_lower(value)
        
        _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_set,self._uniffi_clone_pointer(),
        _UniffiConverterUInt64.lower(index),
        _UniffiConverterBool.lower(value))







class _UniffiConverterTypeBitVec:

    @staticmethod
    def lift(value: int):
        return BitVec._make_instance_(value)

    @staticmethod
    def check_lower(value: BitVec):
        if not isinstance(value, BitVec):
            raise TypeError("Expected BitVec instance, {} found".format(type(value).__name__))

    @staticmethod
    def lower(value: BitVecProtocol):
        if not isinstance(value, BitVec):
            raise TypeError("Expected BitVec instance, {} found".format(type(value).__name__))
        return value._uniffi_clone_pointer()

    @classmethod
    def read(cls, buf: _UniffiRustBuffer):
        ptr = buf.read_u64()
        if ptr == 0:
            raise InternalError("Raw pointer value was null")
        return cls.lift(ptr)

    @classmethod
    def write(cls, value: BitVecProtocol, buf: _UniffiRustBuffer):
        buf.write_u64(cls.lower(value))



class BitmapProtocol(typing.Protocol):
    def copy_raw(self, ):
        raise NotImplementedError
    def equals(self, other: "Bitmap"):
        raise NotImplementedError
    def fill(self, value: "bool"):
        raise NotImplementedError
    def get(self, x: "int",y: "int"):
        raise NotImplementedError
    def height(self, ):
        raise NotImplementedError
    def set(self, x: "int",y: "int",value: "bool"):
        raise NotImplementedError
    def width(self, ):
        raise NotImplementedError


class Bitmap:
    _pointer: ctypes.c_void_p
    def __init__(self, width: "int",height: "int"):
        _UniffiConverterUInt64.check_lower(width)
        
        _UniffiConverterUInt64.check_lower(height)
        
        self._pointer = _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new,
        _UniffiConverterUInt64.lower(width),
        _UniffiConverterUInt64.lower(height))

    def __del__(self):
        # In case of partial initialization of instances.
        pointer = getattr(self, "_pointer", None)
        if pointer is not None:
            _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_bitmap, pointer)

    def _uniffi_clone_pointer(self):
        return _uniffi_rust_call(_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_bitmap, self._pointer)
